# ai-life-agent

./: .env.example  .gitignore  README.md  SPEC.md  demo.py  pyproject.toml
docs/: ARCHITECTURE.md  QUICK_START.md  REACT.md  TOOLS.md  TUTORIAL.md
examples/: step1_hello_llm.py  step2_tools.py  step3_react.py  step4_custom_tool.py  step5_tts.py  step6_full_agent.py
src/ai_life_agent/: __init__.py  cli.py  config.py
src/ai_life_agent/core/: __init__.py  agent.py  executor.py  planner.py  react.py
src/ai_life_agent/llm/: __init__.py  client.py
src/ai_life_agent/memory/: __init__.py
src/ai_life_agent/tools/: __init__.py  builtin.py  registry.py  tts.py
src/minimax_agent/: cli.py
src/minimax_agent/core/: __init__.py  executor.py
src/minimax_agent/tools/: __init__.py  asr.py  vision.py
tests/: test_core.py  test_integration.py  test_llm.py  test_react.py  test_tools.py
